// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProjectCard snapshots (responsive widths) renders correctly at 320px 1`] = `
<div
  style="width: 320px;"
>
  <div
    class="card p-4 md:p-6 h-full flex flex-col transition-shadow hover:shadow-md"
  >
    <div
      class="flex flex-col sm:flex-row justify-between items-start mb-4"
    >
      <h3
        class="text-lg md:text-xl font-semibold text-gray-900 break-words"
      >
        Test Project
      </h3>
      <span
        class="px-2 py-1 text-xs font-medium rounded-full bg-green-100 text-green-800"
      >
        Active
      </span>
    </div>
    <p
      class="text-gray-600 mb-4"
    >
      Short description
    </p>
    <div
      class="flex flex-wrap gap-2 mb-4"
    >
      <span
        class="px-2 py-1 text-xs bg-gray-100 text-gray-700 rounded-full"
      >
        Test
      </span>
    </div>
    <p
      class="text-sm text-gray-500 mb-4 break-words"
    >
      External site — independently developed and maintained by 
      Jane Doe
    </p>
    <div
      class="mt-auto"
    >
      <a
        class="btn-primary focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-300"
        href="https://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Visit Project
        <svg
          class="lucide lucide-external-link ml-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
          <polyline
            points="15 3 21 3 21 9"
          />
          <line
            x1="10"
            x2="21"
            y1="14"
            y2="3"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`ProjectCard snapshots (responsive widths) renders correctly at 768px 1`] = `
<div
  style="width: 768px;"
>
  <div
    class="card p-4 md:p-6 h-full flex flex-col transition-shadow hover:shadow-md"
  >
    <div
      class="flex flex-col sm:flex-row justify-between items-start mb-4"
    >
      <h3
        class="text-lg md:text-xl font-semibold text-gray-900 break-words"
      >
        Test Project
      </h3>
      <span
        class="px-2 py-1 text-xs font-medium rounded-full bg-green-100 text-green-800"
      >
        Active
      </span>
    </div>
    <p
      class="text-gray-600 mb-4"
    >
      Short description
    </p>
    <div
      class="flex flex-wrap gap-2 mb-4"
    >
      <span
        class="px-2 py-1 text-xs bg-gray-100 text-gray-700 rounded-full"
      >
        Test
      </span>
    </div>
    <p
      class="text-sm text-gray-500 mb-4 break-words"
    >
      External site — independently developed and maintained by 
      Jane Doe
    </p>
    <div
      class="mt-auto"
    >
      <a
        class="btn-primary focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-300"
        href="https://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Visit Project
        <svg
          class="lucide lucide-external-link ml-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
          <polyline
            points="15 3 21 3 21 9"
          />
          <line
            x1="10"
            x2="21"
            y1="14"
            y2="3"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`ProjectCard snapshots (responsive widths) renders correctly at 1200px 1`] = `
<div
  style="width: 1200px;"
>
  <div
    class="card p-4 md:p-6 h-full flex flex-col transition-shadow hover:shadow-md"
  >
    <div
      class="flex flex-col sm:flex-row justify-between items-start mb-4"
    >
      <h3
        class="text-lg md:text-xl font-semibold text-gray-900 break-words"
      >
        Test Project
      </h3>
      <span
        class="px-2 py-1 text-xs font-medium rounded-full bg-green-100 text-green-800"
      >
        Active
      </span>
    </div>
    <p
      class="text-gray-600 mb-4"
    >
      Short description
    </p>
    <div
      class="flex flex-wrap gap-2 mb-4"
    >
      <span
        class="px-2 py-1 text-xs bg-gray-100 text-gray-700 rounded-full"
      >
        Test
      </span>
    </div>
    <p
      class="text-sm text-gray-500 mb-4 break-words"
    >
      External site — independently developed and maintained by 
      Jane Doe
    </p>
    <div
      class="mt-auto"
    >
      <a
        class="btn-primary focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-300"
        href="https://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Visit Project
        <svg
          class="lucide lucide-external-link ml-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
          />
          <polyline
            points="15 3 21 3 21 9"
          />
          <line
            x1="10"
            x2="21"
            y1="14"
            y2="3"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;
